test(InspectionList): added unit tests to InspectionList root object validations